# easy-credential

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py
backend/app/models/: __init__.py  auth.py  credential.py  wallet.py
backend/app/routers/: admin.py  auth.py  credentials.py  design.py  health.py  orgs.py  pricing.py  wallets.py
backend/app/services/: badge_assets.py  oauth.py  orgs.py  permissions.py  portable_credentials.py  pricing.py  sessions.py  signing.py  slug.py  wallets.py
backend/easycred_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260520_2300_0001_init_auth.py  20260521_0100_0002_wallet_credentials.py
backend/tests/: test_admin_endpoint.py  test_badge_assets.py  test_credentials_batch.py  test_portable_credentials.py  test_pricing.py  test_signing.py  test_slug.py  test_wallets_service.py
deploy/: start.sh
docs/: PLAN.md  ai-design.md  api.md  architecture.md  compliance.md  data-model.md  deploy.md  pricing.md  roadmap.md  signing-and-verification.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.js  App.tsx  main.js  main.tsx  styles.css
frontend/src/lib/: api.js  api.ts  auth.js  auth.tsx
frontend/src/pages/: BatchIssue.tsx  Login.js  (+13 more)
