[project]
name = "easycred-backend"
version = "0.1.0"
description = "easy-credential FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "pyjwt[crypto]>=2.9",
    "starlette>=0.40",
    "httpx>=0.27",
    "cryptography>=43",
    "stripe>=10",
    "boto3>=1.35",
    "redis>=5",
    "rq>=2",
    "python-multipart>=0.0.12",
    "jinja2>=3.1",
    "qrcode[pil]>=8",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/deps.py" = ["B008"]
"app/routers/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
